syntax = "proto3";

package archipb;


message Question {
    string ID = 1;
    string UserID = 2;
    string Title = 3;
    string Content = 4;
    int64 CreateTime = 5;
    int64 FollowCount = 6;
}

message CreateQuestionReq {
    string UserID = 1;
    string QuestionTitle = 2;
    string QuestionContent = 3;
}

message CreateQuestionResp {
    Question Quest = 1;
}

message UpdateQuestionReq {
    string UserID = 1;
    string ID = 2;
    string Title = 3;
    string Content = 4;
}

message UpdateQuestionResp {
    Question Quest = 1;
}

message GetQuestionReq {
    string QuestionID = 1;
}

message GetQuestionResp {
    Question Quest = 1;
}

message GetQuestionListReq {
    int32 PreviousPageNum = 1;
    int32 PerPage = 2;
}

message GetQuestionListResp {
    repeated Question QList = 1;
    bool HasNext = 2;
    int64 TotalCount = 3;
}

service Archi {
    rpc CreateQuestion(CreateQuestionReq) returns (CreateQuestionResp) {}

    rpc UpdateQuestion(UpdateQuestionReq) returns (UpdateQuestionResp) {}

    rpc GetQuestion(GetQuestionReq) returns (GetQuestionResp) {}

    rpc GetQuestionList(GetQuestionListReq) returns (GetQuestionListResp) {}
}